tests/verbatim_scanner/errors/wrong_terminator_indent.txxt
Expected: []
title:
    content here
    :: wrong_indent ::